<resources>
    <string name="app_name">Summaryzer</string>
    <string name="title_howto_list">Steps</string>
    <string name="title_howto_detail">HowTo Detail</string>
    <string name="pastehint">Paste here to summarize</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcomeGreet">Welcome</string>
    <string name="go">Go!</string>
    <string name="todo">TODO</string>
    <string name="or">Or</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="register">Register</string>
    <string name="anonym_loginInfo">Continuing anonymously does not affect your experience with this app, but changes the way this application works for
        you. Data is still collected but without associating you with it.\nAlso the way in
        which this app functions changes, though it will not affect you in any way.\n\nAre you in?</string>
    <string name="google_loginInfo">
        Continuing with your Google account ensures that you are providing specific info of yours to us.\nWe never collect any account info allowed by even Google, without informing you prior to it.\nYou can trust us with your login credentials and personal info (your name, email ID, and account profile picture).
        If you aren\'t assured, other login options are still back there.\n\nAre you in?
    </string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="anonym_login_button">Anonym login button</string>
    <string name="title_activity_account_view">AccountView</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="none"> </string>
    <string name="loggedas">You haven\'t signed in yet.</string>
    <string name="recently">Recently,</string>
    <string name="logviagoogle">Login via Google</string>
    <string name="anonym_login">Anonymous login</string>
    <string name="app_version">Version 0.0 singularity.</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="rate_on_google_play_store">Rate on Google Play Store</string>
    <string name="report_bug_s">Report bug(s)</string>
    <string name="tell_us_anything_about_the_app">Tell us anything about the app</string>
    <string name="log_out">Log Out</string>
    <string name="delete_my_account_permanently">Delete my account permanently</string>
    <string name="factory_reset_the_applicaton">Factory reset the applicaton</string>
    <string name="remove_my_data_everywhere">Remove my data everywhere</string>
    <string name="account">Account</string>
    <string name="verified_text">Hooray! You are authentic.</string>
    <string name="share_with_others">Share with humans</string>
    <string name="kill_the_app_and_restart">Kill the app and restart</string>
    <string name="in_case_any_problem_occurs_try_this">In case any problem occurs, try this.</string>
    <string name="delete_all_of_your_stored_data_and_activities">Delete all of your stored data and activities.</string>
    <string name="reset_the_application_to_its_initial_state">Reset the application to its initial state.</string>
    <string name="delete_your_account_and_we_don_t_know_you">Delete your account and we don\'t know you.</string>
    <string name="updates_are_important_keep_ths_app_up_to_date">Updates are important. Keep ths app up-to-date.</string>
    <string name="you_liked_this_tell_it_to_google">You liked this? Tell it to Google.</string>
    <string name="need_your_credentials_to_proceed">Need your credentials to proceed.</string>
    <string name="unverified_verify_now">Unverified. Verify now.</string>
    <string name="title_activity_text_open">TextOpenActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="marketing_of_this_app_at_your_level_keep_sharing">Marketing of this app at your level. Keep sharing!</string>
    <string name="tough_guy_finger_snapping_starts">*Tough guy finger snapping starts*</string>
    <string name="for_developers">For developers</string>
    <string name="like_dislike_feautre_request_we_d_love_to_hear">Like? Dislike? Feautre request? We\'d love to hear.</string>
    <string name="preemptive_apology_for_any_error_please_tell_us">Preemptive apology for any error. Please tell us.</string>
    <string name="this_action_requires_your_verification_to_proceed">This action requires your verification to proceed.</string>
    <string name="few_more_steps">Few more steps</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
</resources>
