<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="18dp"
    android:paddingEnd="18dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="32dp"

    android:orientation="horizontal">
    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcomeGreet"
        android:textColor="?attr/textcolor"
        android:textSize="36sp"
        android:textStyle="bold" />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <ImageButton
        android:id="@+id/accountbtn"
        android:tooltipText="@string/title_settings"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_btn"
        android:backgroundTint="?attr/buttoncolor"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_face"
        tools:targetApi="p" />

</LinearLayout>

    <TextView
        android:id="@+id/recenttile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:text="Recently,"
        android:textColor="?attr/textcolor"
        android:textSize="18sp" />

</LinearLayout>